--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       {
         "@type": "SiteNavigationElement",
         "name": "Home",
-        "url": "https://www.eki.my.id/#Home"
+        "url": "https://portofolio-anggafr-bdv3.vercel.app/"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "About",
-        "url": "https://www.eki.my.id/#About"
+        "url": "https://portofolio-anggafr-bdv3.vercel.app/"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Portofolio",
-        "url": "https://www.eki.my.id/#Portofolio"
+        "url": "https://portofolio-anggafr-bdv3.vercel.app/"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Contact",
-        "url": "https://www.eki.my.id/#Contact"
+        "url": "https://portofolio-anggafr-bdv3.vercel.app/"
       }
     ]
   }
